# txtfold

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  experiment-plan.md  output-schema.json  schema.json  usecases.md
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
bindings/npm/: README.md  package.json  tsconfig.json
bindings/npm/src/: AGENTS.md  browser.ts  index.ts  types.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: AGENTS.md  lib.rs
bindings/python/txtfold/: __init__.py  _types.py
cli/: Cargo.toml  README.md
cli/src/: AGENTS.md  main.rs
cli/tests/: integration.rs
core/: Cargo.toml  README.md  build.rs
core/src/: AGENTS.md  clustering.rs  cost_preview.rs  discover.rs  entry.rs  formatter.rs  lib.rs  metadata.rs  ngram.rs  output.rs  parser.rs  patterns.rs  pipeline.rs  registry.rs  schema.rs  schema_clustering.rs  subtree.rs  template.rs  tokenizer.rs
core/src/output/: AGENTS.md  builder.rs  mod.rs  post_processing.rs  types.rs
core/src/pipeline/: AGENTS.md  executor.rs  mod.rs  parser.rs  tokenizer.rs
test-data/: output.json
tools/: extract-docs.ts  gen-types.ts
tools/dump-schema/: Cargo.toml
tools/dump-schema/src/: main.rs
tools/sample-generator/: Cargo.toml
tools/sample-generator/src/: main.rs
web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
web/docs/: crank-reference-for-react-devs.md
web/src/: AGENTS.md  App.tsx  InputPanel.tsx  InstallGuide.tsx  OptionsPanel.tsx  OutputPanel.tsx  Page.tsx  SectionHeader.tsx  State.ts  loadCore.tsx  main.tsx
web/src/markdown/: AGENTS.md  Markdown.tsx  markdown.css
