[workspace]
resolver = "2"
members = ["core", "cli", "tools/sample-generator"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/txtfold"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Common dependencies can be listed here and referenced by workspace members
