[package]
name = "dump-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dump-schema"
path = "src/main.rs"

[dependencies]
txtfold-core = { path = "../../core", features = ["schemars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
