[package]
name = "sample-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sample log file generator for txtfold testing"

[[bin]]
name = "sample-generator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
